<resources>
    <string name="app_name">TianguisTraker💰👵</string>
    <string name="ButtonLogin">Iniciar Sesion</string>
    <string name="registerButton">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">¿Como deseas registrarte? </string>
    <string name="buttonRegisterSeller">Vendedor</string>
    <string name="buttonRegisterBuyer">Comprador</string>
    <string name="logintitle">Iniciar Sesion</string>
    <string name="intoEmail">Correo electronico</string>
    <string name="contraseña">Ingrese su contraseña</string>
    <string name="buttonNext">Siguiente</string>
    <string name="registro_de_vendedor">Registro de vendedor</string>
    <string name="registro_de_comprador">Registro de comprador</string>
    <string name="nombre_completo">Nombre completo:</string>
    <string name="ubicacion">Ubicacion:</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="correo_electronico">Correo Electronico:</string>
    <string name="contrasena">Contraseña:</string>
    <string name="confirmar_contrasena">Confirmar contraseña:</string>
    <string name="siguiente">Siguiente</string>
    <string name="cancelar">Cancelar</string>
    <string name="informacion_del_tianguis">Información del tianguis</string>
    <string name="selecciona_el_tianguis">Selecciona el tianguis:</string>
    <string name="direccion">Dirección:</string>
    <string name="horario">Horario:</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="registrar">Registrar</string>
    <string name="Qr">QR</string>
    <string name="Settingstitle">Configuracion</string>
    <string name="buttonChangeLenguage">Cambiar idioma</string>
    <string name="buttonConsultProductSell">Productos vendidos</string>
    <string name="buttonConsultReviews">Consultar Reseñas</string>
    <string name="tittleInformationUser">Informacion de usuario</string>
    <string name="usernameText">Nombre de usuario</string>
    <string name="UserDateInformation">dia mes año</string>
    <string name="UserEmailinformation">correo@example.com</string>
    <string name="Editinformation">Editar informacion</string>
    <string name="deletUser">Eliminar perfil</string>
    =======

    <!-- TODO: About images -->
    <string name="logo">Logo</string>
    <string name="without_image">Sin imágen</string>
    <string name="ic_baseline_star_border_24">M24,2L12,15.3L2,2h20Z</string>
    <string name="ic_baseline_star_24">M24,12l–7.5,6l2.3-9.1L12,2l-6.8,6.9L4.5,18L12,14.3L19.5,18L17,8.9Z</string>


    <!-- TODO: About users -->
    <string name="email">Correo electronico</string>
    <string name="information_user">Informacion de usuario</string>
    <string name="username">Nombre de usuario</string>
    <string name="user_date_information">dia mes año</string>
    <string name="username_email_information">correo@example.com</string>
    <string name="password">Contraseña</string>
    <string name="register_seller">Registro de vendedor</string>
    <string name="full_name">Nombre completo</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="information_tianguis">Información del tianguis</string>
    <string name="select_tianguis">Selecciona el tianguis</string>
    <string name="direction">Dirección</string>
    <string name="schedule">Horario</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miercoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>

    <!-- TODO: About QR -->
    <string name="qr">QR</string>

    <!-- TODO: About lists -->
    <string name="sold_products">Productos vendidos</string>

    <!-- TODO: About ads -->
    <string name="new_ad">Nuevo anuncio</string>
    <string name="modify_ad">Modificar anuncio</string>
    <string name="name_product">Nombre del producto</string>
    <string name="price">Precio</string>
    <string name="quantity">Cantidad</string>
    <string name="state">Estado</string>
    <string name="type">Tipo</string>

    <!-- TODO: About fragments -->
    <string name="how_do_you_want_register_you">¿Como deseas registrarte? </string>
    <string name="choose_an_option">Elige una opción</string>
    <string name="settings">Configuracion</string>

    <!-- TODO: About buttons -->
    <string name="login">Iniciar Sesión</string>
    <string name="button_register">Registrarse</string>
    <string name="edit">Editar perfil</string>
    <string name="show_details_user_seller">Más información</string>
    <string name="delete">Eliminar perfil</string>
    <string name="next">Siguiente</string>
    <string name="register">Registrar</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="consult_reviews">Consultar Reseñas</string>
    <string name="load_image">Cargar imágen</string>
    <string name="take_photo">Tomar foto</string>
    <string name="load_from_gallery">Subir de galería</string>
    <string name="change_language">Cambiar idioma</string>
    <string name="seller">Vendedor</string>
    <string name="buyer">Comprador</string>
    <string name="spanish">Español</string>
    <string name="english">Inglés</string>
    <string name="register_buyer">Registrar Comprador</string>
    <string name="create_reviews">Crear reseña</string>
    <string name="ToastAlertLenguaje">Se a cambiado el idioma con exito</string>
    <string name="title_fav_product">Productos marcados como Favoritos</string>
    <string name="button_reserver">Reservar</string>
    <string name="reserverProducts">Tus Productos Apartados</string>
    <string name="selected_birthdate">Selecciona una fecha de nacimiento</string>
    <string name="log_out">Cerrar Sesion</string>
    <string name="ToastEmailIncorrect">Error: Correo incorrecto, compruebe e intente de nuevo</string>
    <string name="ToastPasswordIncorrect">Error: Contraseña incorrecta, intente de nuevo</string>
    <string name="ToastErrorResponse">A ocurrido un error :c, intente mas tarde</string>
    <string name="ToastLoginCorrect">Bienvenido a TianguisTraker 💰👵</string>
    <string name="ScanTestInstrucion">Escanee el QR para ver la info del producto</string>
    <string name="details_product">Detalles</string>
    <string name="ToastTextVoid">Error: Exiten campos vacios, revise por favor</string>
    <string name="ToastValidNumbers">Error, ingrese una cantidad valida</string>
    <string name="category">Categoria</string>
    <string name="ToastImageSelected">Error: Seleccione una imagen para registrar</string>
    <string name="statusProductInit">Disponible</string>
    <string name="ToastReviewIncorrect">La reseña no ha sido enviada correctamente, completa los campos.</string>
    <string name="ToastReviewSent">Listo, Reseña enviada correctamente!</string>
    <string name="tianguis_locate">Ubicación de tianguis</string>
</resources>