<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.view.CreateAdImageActivity">

    <ImageView
        style="@style/style_logo"
        android:id="@+id/ivLogo"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/style_title"
        android:id="@+id/tvNewAd"
        android:text="@string/new_ad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>

    <ImageView
        style="@style/style_image"
        android:id="@+id/ivNewImage"
        android:contentDescription="@string/without_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNewAd" />

    <Button
        style="@style/style_button"
        android:id="@+id/btLoadImage"
        android:text="@string/load_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivNewImage" />

    <Button
        style="@style/style_button"
        android:id="@+id/btSaveCreateAd"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLoadImage"/>

    <Button
        style="@style/style_button"
        android:id="@+id/btCancelCreateAdImage"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSaveCreateAd"/>

</androidx.constraintlayout.widget.ConstraintLayout>