<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".ui.view.fragment.UserPopRegisterSelect">

    <TextView
        android:layout_width="374dp"
        android:layout_height="72dp"
        android:text="@string/hello_blank_fragment"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerBuyer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <Button
        android:id="@+id/registerSeller"
        android:layout_width="252dp"
        android:layout_height="59dp"
        android:layout_marginBottom="76dp"
        android:text="@string/buttonRegisterSeller"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerBuyer"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginBottom="140dp"
        android:text="@string/buttonRegisterBuyer"
        android:textSize="20sp"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>